# casino-ui

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  tailwind.config.js
src/: binding.rs  lib.rs  main.css  main.rs
src/apis/: customer.rs  game.rs  integration.rs  mod.rs  notification.rs  team.rs  ticket.rs  user.rs
src/components/atoms/: button.rs  icon.rs  label.rs  mod.rs  text_input.rs
src/components/organisms/: auth_layout.rs  export_button.rs  form_layout.rs  mod.rs  navbar.rs  paginator.rs
src/components/pages/auth/: forgot_password.rs  login.rs  mod.rs  set_password.rs
src/components/pages/main/: customer_profile.rs  customers.rs  games.rs  integrations.rs  mod.rs  notifications.rs  overview.rs  participants.rs  settings.rs  teams.rs  tickets.rs
src/js/: chart.js
src/routes/: app_routes.rs  auth_routes.rs  main_routes.rs  mod.rs
src/stores/: auth_store.rs  user_store.rs
src/utils/: capitalize.rs  format_dates.rs  mod.rs  render_svg.rs  string_validation.rs
