[package]
name = "casino-admin"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
gloo = "0.10.0"
serde = "1.0.190"
serde_json = "1.0.108"
wasm-bindgen = "0.2.87"
web-sys = "0.3.64"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
