[package]
name = "casino-admin"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
gloo = "0.10.0"
serde = "1.0.190"
serde_json = "1.0.108"
wasm-bindgen = "0.2.87"
web-sys = "0.3.64"
yew = "0.21.0"
yew-router = "0.18.0"
yew_icons = { version = "0.8.0", features = ["LucideHeart", "HeroiconsSolidClock"] }
yewdux = "0.9.4"
