[package]
name = "casino-admin"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.31"
dotenv = "0.15.0"
gloo-console = "0.3.0"
iconify = "0.2.5"
reqwasm = "0.5.0"
serde = "1.0.190"
serde_json = "1.0.108"
web-sys = { version = "0.3.65", features = ["InputEvent", "HtmlInputElement", "HtmlSelectElement"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
yewdux = "0.9.4"
js-sys = "0.3.66"
